<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/group_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:elevation="8dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/grouprow_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/grouprow_groupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:id="@+id/grouprow_delete_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:drawable/ic_delete"
                android:focusable="false" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>